fix: double border on feed header when viewing a post (#2593)
* fix: fixed header height

* fix: remove double border

--- a/src/apps/feed/components/post-view-container/styles.module.scss
+++ b/src/apps/feed/components/post-view-container/styles.module.scss
@@ -20,6 +20,7 @@
   box-sizing: border-box;
   gap: 16px;
   border: 1px solid var(--color-greyscale-7);
+  border-top: none;
   padding: 16px;
 }
 
